# insight

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.txt
Source/: CMakeLists.txt  Todo.txt  ai_wavtime.cpp  ai_wavtime.hpp
Source/insight/: CMakeLists.txt  audio_file.hpp  buffer.hpp  hash.cpp  hash.hpp  platform.cpp  platform.hpp  swap_endian.hpp  timecode.cpp  timecode.hpp
Source/insight/mpeg/: mpeg_file.cpp  mpeg_file.hpp  mpeg_header.cpp  mpeg_header.hpp
Source/insight/platform/mac/: Finder.h  browser_mac.hpp  browser_mac.mm
Source/insight/wav/: bext_chunk.cpp  bext_chunk.hpp  chunk.cpp  chunk.hpp  chunk_cache.hpp  chunk_id.cpp  chunk_id.hpp  cue_chunk.cpp  cue_chunk.hpp  default_chunk.cpp  default_chunk.hpp  fmt_chunk.cpp  fmt_chunk.hpp  list_chunk.cpp  list_chunk.hpp  wave_file.cpp  wave_file.hpp
Source/insight/wav/list/: adtl_list_data.cpp  adtl_list_data.hpp
Source/tests/: CMakeLists.txt  buffer_test.cpp  chunk_id_tests.cpp  default_chunk_tests.cpp  insight_tests.cpp  insight_tests.hpp  main.cpp  timecode_tests.cpp  wav_test.cpp
Source/tests/assets/wav/bext/: bext_chunk_odd
insight.xcodeproj/: project.pbxproj
insight.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
insight.xcodeproj/project.xcworkspace/xcuserdata/aaron.xcuserdatad/: UserInterfaceState.xcuserstate
insight.xcodeproj/xcshareddata/xcschemes/: ai_wavtime.xcscheme
insight.xcodeproj/xcuserdata/aaron.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
insight.xcodeproj/xcuserdata/aaron.xcuserdatad/xcschemes/: xcschememanagement.plist
